--- a/web/css/app.css
+++ b/web/css/app.css
@@ -207,6 +207,7 @@ a, a:link, a:visited, a:hover, a:active {
     right: 0;
     left: 0;
     z-index: 9;
+    white-space: nowrap;/*强制不换行*/
 }
 
 /* Flip around the padding for proper display in narrow viewports */
