--- a/web/css/app.css
+++ b/web/css/app.css
@@ -542,11 +542,12 @@ a, a:link, a:visited, a:hover, a:active {
     margin: 0;
     overflow: hidden;
     border-radius: 5px 0 0 5px;
-    border-left: 1px solid #fff;
+    border-left: 3px solid #fff;
 }
 #pop-menu li{
     height: 30px;
     line-height: 30px;
+    border-bottom: 1px solid #fff;
 }
 #pop-menu li a{
     padding: 0 5px;
