--- a/web/css/app.css
+++ b/web/css/app.css
@@ -32,10 +32,12 @@ a, a:link, a:visited, a:hover, a:active {
 /*}*/
 .droppable {
     /*border: 1px solid #fff546;*/
-    background: rgba(0,0,0,0.7);
+    /*background: rgba(0,0,0,0.7);*/
     height: 100%;
     width: 100%;
     transform-origin: 0 0;
+    z-index: -1;
+
 }
 
 .refresh,.fullscreen{
@@ -69,35 +71,38 @@ a, a:link, a:visited, a:hover, a:active {
     cursor: move;
     z-index: 9;
     overflow: hidden;
+    filter: alpha(opacity=800);
+    opacity: 0.8;
 }
 .window.active{
     z-index: 10;
     border: 1px solid red;
 }
+.window.pep-active{
+    filter: alpha(opacity=500);
+    opacity: 0.5;
+}
+
 .window .title {
     position: absolute;
     width: 100%;
-    height: 20px;
+    height: 30px;
+    line-height: 30px;
     background: #ccc;
     font-size: 12px;
-    line-height: 20px;
-    text-align: center;
     font-weight: bold;
 }
 .window .title .button {
     float: right;
-    width: 15px;
-    height: 15px;
-    line-height: 15px;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
     text-align: center;
     font-weight: normal;
     font-size: 12px;
     border-radius: inherit;
     margin: 2px 2px;
-
-    box-sizing: border-box;
     cursor: pointer;
-
     text-shadow: none;
     filter: alpha(opacity=100);
     opacity: 1;
@@ -112,8 +117,8 @@ a, a:link, a:visited, a:hover, a:active {
 }
 .window .content {
     height: 100%;
-    background: rgba(3, 103, 132, 0.7);
-    padding-top: 20px;
+    /*background: rgba(3, 103, 132, 0.7);*/
+    padding-top: 30px;
     color: #fff;
 }
 
@@ -578,4 +583,22 @@ a, a:link, a:visited, a:hover, a:active {
     width: 20px;
     padding-right: 5px;
     text-align: center;
+}
+
+.draw-box {
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    opacity: 0.5;
+    background: red;
+}
+#active-box{
+    border:1px dashed #fff;
+}
+#mouse-pos{
+    position: absolute;
+    left: 0;
+    bottom:0;
+    color: #fff;
+    padding: 0 5px;
 }
