--- a/web/css/app.css
+++ b/web/css/app.css
@@ -121,7 +121,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 }
 .window.active{
     z-index: 10;
-    border: 1px solid red;
+    border: 1px solid #fff;
 }
 .window.pep-active{
     filter: alpha(opacity=500);
@@ -165,7 +165,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 .window .content {
     height: 100%;
     /*background: rgba(3, 103, 132, 0.7);*/
-    padding-top: 30px;
+    padding: 30px 5px 5px 5px;
     color: #fff;
     overflow: hidden;
 }
