--- a/web/css/app.css
+++ b/web/css/app.css
@@ -67,6 +67,10 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     font-size: 10vw;
     line-height: 100vh;
 }
+.msg-time{
+    font-size: 12px;
+    color: #A9A7A7;
+}
 /*.droppable {*/
     /*border: 1px solid #fff546;*/
     /*min-height: 300px;*/
@@ -81,7 +85,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 .droppable {
     height: 100%;
     width: 100%;
-    z-index: -1;
+    /*z-index: -1;*/
 
     transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1);
 }
@@ -253,6 +257,18 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     color: #fff;
 }
 
+.draw-win{
+    position: relative;
+}
+.draw-win .fa-stack{
+    position: absolute;
+    top: 15%;
+    left: 40%;
+    display: none;
+}
+.draw-win.active{
+
+}
 
 .sky-btn.dropdown > .dropdown-toggle{
     display: block;
@@ -306,9 +322,9 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     position: absolute;
     left: 43px; right: 0;
 }
-#sky-wrapper .row.off>.col.left .panel-body>.tab-content{
-    overflow-y: hidden;
-}
+/*#sky-wrapper .row.off>.col.left .panel-body>.tab-content{*/
+    /*overflow-y: hidden;*/
+/*}*/
 
 /* 导航条样式 */
 .navbar-wrapper {
@@ -587,6 +603,10 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     margin-left: 9px;
     line-height: inherit;
 }
+.input ul .item > span:nth-child(1){
+    margin-left: 5px;
+}
+
 .input ul .item > :nth-child(2),.scene ul .item > :nth-child(2){
     text-align: center;
     display: block;
