--- a/web/css/app.css
+++ b/web/css/app.css
@@ -11,6 +11,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     width: 100%;
     height: 100%;
     overflow: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 .main-body{
     background: url('../img/wood1.png');
@@ -86,7 +87,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     height: 100%;
     width: 100%;
     /*z-index: -1;*/
-
+    cursor: crosshair;
     transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -266,8 +267,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     left: 40%;
     display: none;
 }
-.draw-win.active{
-
+.draw-win.disable .fa-stack{
+    display: block;
 }
 
 .sky-btn.dropdown > .dropdown-toggle{
@@ -415,11 +416,6 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     margin: 0;
     padding: 0;
     list-style: none;
-}
-
-#sky-wrapper .panel-inverse > .panel-heading .action-btn-group .sky-btn:hover i{
-    -webkit-animation: fa-spin 1s ease-in-out;
-    animation: fa-spin 1s ease-in-out;
 }
 
 #sky-wrapper .panel-inverse > .panel-heading .action-btn-group.right{
@@ -588,6 +584,10 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 .input ul .item.active, .scene ul .item.active{
     color: #fff;
 }
+.input ul .item.disable{
+    cursor: not-allowed;
+}
+
 .scene ul .item.active{
     color: #fff;
     border: 1px solid red;
