--- a/web/css/app.css
+++ b/web/css/app.css
@@ -199,39 +199,46 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 
 #box { width: 200px; height: 100px; cursor: move; position: absolute; top: 30px; left: 30px; background-color: #FFF; border: 1px solid #CCCCCC;  -webkit-box-shadow: 10px 10px 25px #ccc;-moz-box-shadow: 10px 10px 25px #ccc;box-shadow: 10px 10px 25px #ccc;}
 
-.coor { display:none; width: 10px; height: 10px; overflow: hidden; position: absolute;  background-color: #fff; border-radius: 20px;}
-
+.coor { box-sizing:content-box;padding:5px;display:none; width: 10px; height: 10px; overflow: hidden; position: absolute;}
+.coor:before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 20px;
+}
 .coor.ne{
     cursor: ne-resize;
-    top: -5px;right: -5px;
+    top: -10px;right: -10px;
 }
 .coor.n{
     cursor: n-resize;
-    top: -5px; left: calc(50% - 5px);
+    top: -10px; left: calc(50% - 10px);
 }
 .coor.nw{
     cursor: nw-resize;
-    top: -5px; left: -5px;
+    top: -10px; left: -10px;
 }
 .coor.e{
     cursor: e-resize;
-    top:calc(50% - 5px); right: -5px;
+    top:calc(50% - 10px); right: -10px;
 }
 .coor.w{
     cursor: w-resize;
-    top:calc(50% - 5px); left: -5px;
+    top:calc(50% - 10px); left: -10px;
 }
 .coor.sw{
     cursor: sw-resize;
-    bottom: -5px; left: -5px;
+    bottom: -10px; left: -10px;
 }
 .coor.s{
     cursor: s-resize;
-    bottom: -5px; left: calc(50% - 5px);
+    bottom: -10px; left: calc(50% - 10px);
 }
 .coor.se{
     cursor: se-resize;
-    right: -5px; bottom: -5px;
+    right: -10px; bottom: -10px;
 }
 
 /*.pep:hover .coor{*/
