--- a/web/css/app.css
+++ b/web/css/app.css
@@ -7,6 +7,9 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     -ms-user-select: none;
     -moz-user-select: none;
 }
+.clear{
+    clear: both;
+}
 .main-html, .main-body{
     width: 100%;
     height: 100%;
@@ -495,7 +498,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     list-style: none;
     float: left;
     display: inline-block;
-    width: 33.33333%;
+    /*width: 33.33333%;*/
+    width: 50%;
     height: 100%;
 }
 #sky-wrapper .panel-inverse .left-footer-btn .item.active{
@@ -748,22 +752,25 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 
 /*分隔线*/
 .sky-tag{
-    border-bottom: 1px solid #D4D4D4;
-    padding-left: 20px;
-    margin: 5px 0;
+    position: relative;
+    border: 1px solid #D4D4D4;
+    padding: 20px 10px 10px;
+    margin: 15px 0;
+    border-radius: 5px;
 }
 .sky-tag .word{
-    position: relative;
+    position: absolute;
     display: inline-table;
     color: #f9f9f9;
     background: #5599ff;
     padding: 0 5px;
+    top: -10px;left: 20px;
 }
 .sky-tag .word::before{
     content: '';
     position: absolute;
-    left: -11px;
-    border-top:11px solid transparent;
+    left: -10px;
+    border-top:10px solid transparent;
     border-bottom:11px solid transparent;
     border-right:11px solid #5599ff;
 }
@@ -771,7 +778,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     content: '';
     position: absolute;
     right: -10px;
-    border-top:11px solid transparent;
+    border-top:10px solid transparent;
     border-bottom: 11px solid transparent;
     border-left: 11px solid #5599ff;
 }
@@ -784,7 +791,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 #software_setting .lang{
     display: inline-table;
 }
-#software_setting #lang_switcher{
+
+.btn.right{
     float: right;
 }
 
@@ -798,6 +806,41 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     list-style: none;
 }
 
-#resolution_slider{
-    width: 100px;
+/*重写slider样式*/
+.sky-slider{
+    /*width: 400px;*/
+}
+
+.sky-slider+span{
+    display: inline-table;
+    margin-left: 20px;
+}
+
+/*重写slider插件刻度lable*/
+.slider.slider-horizontal .slider-tick-label-container .slider-tick-label{
+    padding-top: 4px;
+    display: inline-block;
+    text-align: center;
+    transform: rotate(20deg);
+    font-size: 12px;
+}
+
+/*重写bootstrap样式*/
+.form-horizontal .form-group {
+    margin-right: 0;
+    margin-left: 0;
+}
+.sky-tag .form-horizontal .form-group.line-height{
+    margin-bottom: 0;
+    line-height: 2.5;
+}
+.form-horizontal .checkbox{
+    padding-top: 0;
+    margin: 10px 5px;
+}
+.form-horizontal .checkbox-slider--c input + span {
+    padding-left: 35px;
+}
+.modal{
+    overflow: auto;
 }
