--- a/web/css/app.css
+++ b/web/css/app.css
@@ -7,6 +7,9 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     -ms-user-select: none;
     -moz-user-select: none;
 }
+.clear{
+    clear: both;
+}
 .main-html, .main-body{
     width: 100%;
     height: 100%;
@@ -61,12 +64,25 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 .loader{
     position: absolute;
     top:0; left: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.5);
     z-index: 9999;
     text-align: center;
     color: #fff;
     font-size: 10vw;
     line-height: 100vh;
+}
+.frosted-glass{
+    background: rgba(25, 25, 25, 0.73);
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
+    -o-filter: blur(5px);
+    filter: blur(5px);
+    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=4, MakeShadow=false);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 .msg-time{
     font-size: 12px;
@@ -473,7 +489,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     overflow: hidden;
 }
 #sky-wrapper .row.off .left > .panel-inverse > .panel-footer {
-    height: 120px;
+    /*height: 120px;*/
+    height: 80px;
 }
 
 #sky-wrapper .panel-inverse .left-footer-bt{
@@ -495,7 +512,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     list-style: none;
     float: left;
     display: inline-block;
-    width: 33.33333%;
+    /*width: 33.33333%;*/
+    width: 50%;
     height: 100%;
 }
 #sky-wrapper .panel-inverse .left-footer-btn .item.active{
@@ -506,7 +524,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     /* float: left; */
     /* display: inline-block; */
     width: 100%;
-    height: 33.3333%;
+    /*height: 33.3333%;*/
+    height: 50%;
 }
 #sky-wrapper .left .panel-body .tab-content{
     width: 100%;
@@ -528,6 +547,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     background: transparent;
     border-radius: 0;
     border: none;
+    color: #fff;
 }
 #sky-wrapper .panel-inverse .left-footer-btn .item > a:hover {
     background: initial;
@@ -567,6 +587,11 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 #sky-wrapper .right .panel-body {
     overflow: auto;
     padding: 0;
+}
+
+.input, .scene{
+    width: 100%;
+    height: 100%;
 }
 
 .input ul,.scene ul{
@@ -624,6 +649,14 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
+
+    background: rgba(25, 25, 25, 0.73);
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
+    -o-filter: blur(5px);
+    filter: blur(5px);
+    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=4, MakeShadow=false);
 }
 
 .scene ul .item .grid3x3{
@@ -671,7 +704,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     position: absolute;
     top: 0;left: 0;right: 0;bottom: 0;
     z-index: 999;
-    background: rgba(0,0,0,0.4);
+    /*background: rgba(0,0,0,0.4);*/
 }
 .pop-menu ul{
     position: absolute;
@@ -748,22 +781,25 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 
 /*分隔线*/
 .sky-tag{
-    border-bottom: 1px solid #D4D4D4;
-    padding-left: 20px;
-    margin: 5px 0;
+    position: relative;
+    border: 1px solid #D4D4D4;
+    padding: 20px 10px 10px;
+    margin: 15px 0;
+    border-radius: 5px;
 }
 .sky-tag .word{
-    position: relative;
+    position: absolute;
     display: inline-table;
     color: #f9f9f9;
     background: #5599ff;
     padding: 0 5px;
+    top: -10px;left: 20px;
 }
 .sky-tag .word::before{
     content: '';
     position: absolute;
-    left: -11px;
-    border-top:11px solid transparent;
+    left: -10px;
+    border-top:10px solid transparent;
     border-bottom:11px solid transparent;
     border-right:11px solid #5599ff;
 }
@@ -771,7 +807,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     content: '';
     position: absolute;
     right: -10px;
-    border-top:11px solid transparent;
+    border-top:10px solid transparent;
     border-bottom: 11px solid transparent;
     border-left: 11px solid #5599ff;
 }
@@ -784,7 +820,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 #software_setting .lang{
     display: inline-table;
 }
-#software_setting #lang_switcher{
+
+.btn.right{
     float: right;
 }
 
@@ -798,6 +835,50 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     list-style: none;
 }
 
-#resolution_slider{
-    width: 100px;
+.val_label{
+    display: inline-table;
+    margin-left: 20px;
+}
+
+/*重写slider插件刻度lable*/
+.slider.slider-horizontal .slider-tick-label-container .slider-tick-label{
+    padding-top: 4px;
+    display: inline-block;
+    text-align: center;
+    transform: rotate(20deg);
+    font-size: 12px;
+}
+.sky-margin-10{
+    margin: 10px 0;
+}
+
+/*重写bootstrap样式*/
+.form-horizontal .form-group {
+    margin-right: 0;
+    margin-left: 0;
+}
+.sky-tag .form-horizontal .form-group.line-height{
+    margin-bottom: 0;
+    line-height: 2.5;
+}
+.form-horizontal .checkbox{
+    padding-top: 0;
+    margin: 10px 5px;
+}
+.form-horizontal .checkbox-slider--c input + span {
+    padding-left: 35px;
+}
+.modal{
+    overflow: auto;
+}
+
+.color-1{
+    color: #89ff7f;
+}
+
+#comm_tab i{
+    display: none;
+}
+#comm_tab .active .fa{
+    display: initial;
 }
