--- a/web/css/app.css
+++ b/web/css/app.css
@@ -22,6 +22,59 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 #tag-list {
     height: 200px;
 }
+
+/*修改fontawesome*/
+.fa{
+    min-width: 18px;
+    text-align: center;
+}
+
+.display-table{
+    display: table;
+}
+.display-table-cell{
+    display:table-cell;
+    vertical-align: middle;
+}
+
+/*登录*/
+.login-form{
+    margin: 0 auto;
+    width: 400px;
+    background: rgba(62, 62, 62, 0.48);
+
+    color: #f9f9f9;
+}
+.login-header{
+    text-align: center;
+    font-size: 1.5em;
+    min-height: 16.43px;
+    padding: 15px;
+    border-bottom: 1px solid #e5e5e5;
+}
+.login-body{
+    position: relative;
+    padding: 15px;
+}
+.login-footer{
+    padding: 15px;
+    text-align: right;
+    border-top: 1px solid #e5e5e5;
+}
+.login-btn{
+    background: transparent;
+    border: 1px solid;
+}
+
+.user-info{
+    font-size: 18px;
+    max-width: 100px;
+    margin-left: 15px;
+}
+#login_result{
+    display: none;
+}
+
 /*fadeIn 动画*/
 @keyframes fadeIn {
     0% {opacity: 0;}50% {opacity: 0.5;}100% {opacity: 1;}
@@ -64,12 +117,25 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 .loader{
     position: absolute;
     top:0; left: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.5);
     z-index: 9999;
     text-align: center;
     color: #fff;
     font-size: 10vw;
     line-height: 100vh;
+}
+.frosted-glass{
+    background: rgba(25, 25, 25, 0.73);
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
+    -o-filter: blur(5px);
+    filter: blur(5px);
+    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=4, MakeShadow=false);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 .msg-time{
     font-size: 12px;
@@ -145,7 +211,9 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     font-size: 12px;
     font-weight: bold;
     color: #f9f9f9;
+    overflow: hidden;
 }
+
 .window .title .button {
     float: right;
     width: 25px;
@@ -343,7 +411,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     top: 0;
     right: 0;
     left: 0;
-    z-index: 9;
+    z-index: 999;
     white-space: nowrap;/*强制不换行*/
 }
 
@@ -476,7 +544,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     overflow: hidden;
 }
 #sky-wrapper .row.off .left > .panel-inverse > .panel-footer {
-    height: 120px;
+    /*height: 120px;*/
+    height: 80px;
 }
 
 #sky-wrapper .panel-inverse .left-footer-bt{
@@ -510,7 +579,8 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     /* float: left; */
     /* display: inline-block; */
     width: 100%;
-    height: 33.3333%;
+    /*height: 33.3333%;*/
+    height: 50%;
 }
 #sky-wrapper .left .panel-body .tab-content{
     width: 100%;
@@ -532,6 +602,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     background: transparent;
     border-radius: 0;
     border: none;
+    color: #fff;
 }
 #sky-wrapper .panel-inverse .left-footer-btn .item > a:hover {
     background: initial;
@@ -571,6 +642,11 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 #sky-wrapper .right .panel-body {
     overflow: auto;
     padding: 0;
+}
+
+.input, .scene{
+    width: 100%;
+    height: 100%;
 }
 
 .input ul,.scene ul{
@@ -628,6 +704,9 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
+
+    background: rgba(25, 25, 25, 0.73) no-repeat;
+    background-size: 100%;
 }
 
 .scene ul .item .grid3x3{
@@ -675,7 +754,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     position: absolute;
     top: 0;left: 0;right: 0;bottom: 0;
     z-index: 999;
-    background: rgba(0,0,0,0.4);
+    /*background: rgba(0,0,0,0.4);*/
 }
 .pop-menu ul{
     position: absolute;
@@ -796,6 +875,10 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     float: right;
 }
 
+.btn-float-r{
+    text-align: right;
+}
+
 #version_info .company{
     color: #0e408e;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -806,12 +889,7 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     list-style: none;
 }
 
-/*重写slider样式*/
-.sky-slider{
-    /*width: 400px;*/
-}
-
-.sky-slider+span{
+.val_label{
     display: inline-table;
     margin-left: 20px;
 }
@@ -823,6 +901,9 @@ a, a:link, a:visited, a:hover, a:active ,ul{
     text-align: center;
     transform: rotate(20deg);
     font-size: 12px;
+}
+.sky-margin-10{
+    margin: 10px 0;
 }
 
 /*重写bootstrap样式*/
@@ -843,4 +924,36 @@ a, a:link, a:visited, a:hover, a:active ,ul{
 }
 .modal{
     overflow: auto;
+}
+
+.color-1{
+    color: #89ff7f;
+}
+
+#comm_tab i{
+    display: none;
+}
+#comm_tab .active .fa{
+    display: initial;
+}
+
+#drag {
+    background: rgba(232, 232, 232, 0.58);
+    height: 25px;
+    line-height: 15px;
+    position: absolute;
+    border-radius: 50px;
+    z-index: 999;
+    padding: 5px;
+
+    opacity:0;
+    transition: opacity 300ms ease-in-out;
+    -webkit-transition: opacity 300ms ease-in-out;
+    -moz-transition: opacity 300ms ease-in-out;
+    -ms-transition: opacity 300ms ease-in-out;
+    -o-transition: opacity 300ms ease-in-out;
+}
+
+#drag.active {
+    opacity:1;
 }
