--- a/web/css/app.css
+++ b/web/css/app.css
@@ -192,10 +192,17 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     /*margin: 10px;*/
     border: 1px solid #ccc;
     cursor: move;
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
     /*z-index: 1;*/
     filter: alpha(opacity=800);
     opacity: 0.8;
 }
+div:active {
+    cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+}
+
 .window.active{
     /*z-index: 10 !important;*/
     border: 1px solid #fff;
