--- a/web/css/app.css
+++ b/web/css/app.css
@@ -17,7 +17,8 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     -webkit-overflow-scrolling: touch;
 }
 .main-body{
-    background: url('../img/wood1.png');
+    /*background: url('../img/wood1.png');*/
+    background: #e1e7f1;
 }
 #tag-list {
     height: 200px;
@@ -72,7 +73,7 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
 .user-info{
     font-size: 18px;
     max-width: 100px;
-    margin-left: 15px;
+    margin: 0 15px;
 }
 #login_result{
     display: none;
@@ -117,7 +118,7 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
 /*-moz-animation: fadeIn 0.5s 1 0s;*/
 /*-ms-animation: fadeIn 0.5s 1 0s;*/
 /*-o-animation: fadeIn 0.5s 1 0s;*/
-.loader{
+#loader{
     position: absolute;
     top:0; left: 0; right: 0; bottom: 0;
     z-index: 9999;
@@ -217,7 +218,7 @@ div:active {
     width: 100%;
     height: 30px;
     line-height: 30px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.2);
     font-size: 12px;
     font-weight: bold;
     color: #f9f9f9;
@@ -238,7 +239,7 @@ div:active {
     font-weight: normal;
     font-size: 20px;
     border-radius: inherit;
-    margin: 2px 2px;
+    margin: 2px 2px 2px 5px;
     cursor: pointer;
     text-shadow: none;
     filter: alpha(opacity=100);
@@ -296,20 +297,22 @@ div:active {
 
 #box { width: 200px; height: 100px; cursor: move; position: absolute; top: 30px; left: 30px; background-color: #FFF; border: 1px solid #CCCCCC;  -webkit-box-shadow: 10px 10px 25px #ccc;-moz-box-shadow: 10px 10px 25px #ccc;box-shadow: 10px 10px 25px #ccc;}
 
-.coor { box-sizing:content-box;padding:15px;display:none; width: 10px; height: 10px; overflow: hidden; position: absolute;z-index: -1}
+.coor { box-sizing:content-box;padding:15px;display:none; width: 10px; height: 10px; overflow: hidden; position: absolute;z-index: 1}
 .coor:before{
     content: '';
     display: block;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: #e1e7f1;
     border-radius: 20px;
 }
 .coor.ne{
+    padding-left: 5px;
     cursor: ne-resize;
     top: -20px;right: -20px;
 }
 .coor.n{
+    padding-bottom: 5px;
     cursor: n-resize;
     top: -20px; left: calc(50% - 20px);
 }
@@ -318,10 +321,12 @@ div:active {
     top: -20px; left: -20px;
 }
 .coor.e{
+    padding-left: 5px;
     cursor: e-resize;
     top:calc(50% - 20px); right: -20px;
 }
 .coor.w{
+    padding-right: 5px;
     cursor: w-resize;
     top:calc(50% - 20px); left: -20px;
 }
@@ -330,6 +335,7 @@ div:active {
     bottom: -20px; left: -20px;
 }
 .coor.s{
+    padding-top: 5px;
     cursor: s-resize;
     bottom: -20px; left: calc(50% - 20px);
 }
@@ -350,7 +356,7 @@ div:active {
 
 .sky-btn{
     cursor: pointer;
-    color: #9d9d9d;
+    color: #f7f7f7;
 }
 .sky-btn a{
     display: block;
@@ -381,7 +387,7 @@ div:active {
 
 #sky-wrapper{
     position: absolute;
-    top: 70px;
+    top: 60px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -417,6 +423,31 @@ div:active {
     -webkit-transition: left 500ms;
     -o-transition: left 500ms;
     -ms-transition: left 500ms;
+}
+
+@media only screen and (max-width: 992px) {
+    #sky-wrapper .row>.col.left{
+        width: 180px;
+    }
+    #sky-wrapper .row>.col.right{
+        left: 183px;
+    }
+}
+@media only screen and (max-width: 768px) {
+    #sky-wrapper .row>.col.left{
+        width: 150px;
+    }
+    #sky-wrapper .row>.col.right{
+        left: 153px;
+    }
+}
+@media only screen and (max-width: 550px) {
+    #sky-wrapper .row>.col.left{
+        width: 110px;
+    }
+    #sky-wrapper .row>.col.right{
+        left: 113px;
+    }
 }
 
 #sky-wrapper .row.off>.col.left{
@@ -489,10 +520,11 @@ div:active {
 #sky-wrapper .panel-inverse {
     position: absolute;
     background: none;
-    border-color: #222;
+    /*border-color: #4391e2;*/
     height: 100%;
     width: 100%;
     margin: 0;
+    /*border-radius: 0;*/
 }
 #sky-wrapper .panel-inverse > * {
     position: absolute;left: 0;right:0;
@@ -504,8 +536,9 @@ div:active {
     line-height: 40px;
     text-align: center;
     color: #fff;
-    background-color: #222;
-    border-color: #222;
+    background-color: #4b97e2;
+    border-color: #4391e2;
+    border-radius: 0;
 }
 #sky-wrapper .right .panel-body .placeholder{
     position: absolute;
@@ -524,6 +557,9 @@ div:active {
 
 #sky-wrapper .panel-inverse > .panel-heading .action-btn-group.right{
     float: right;
+}
+#sky-wrapper .panel-inverse > .panel-heading .action-btn-group.right input{
+    width: 150px;
 }
 #sky-wrapper .panel-inverse > .panel-heading .action-btn-group.right .dropdown-menu{
     right: 0;
@@ -623,12 +659,13 @@ div:active {
     background: initial;
     padding: 0;
     margin: 0;
+    color: #bababa;
 }
 #sky-wrapper .panel-inverse .left-footer-btn .item.active > a{
     background: transparent;
     border-radius: 0;
     border: none;
-    color: #fff;
+    color: #f7f7f7;
 }
 #sky-wrapper .panel-inverse .left-footer-btn .item > a:hover {
     background: initial;
@@ -659,7 +696,8 @@ div:active {
     top: 40px;
     bottom: 40px;
     color: #fff;
-    background-color: rgba(0,0,0,0.5);
+    /*background-color: rgba(0,0,0,0.5);*/
+    background-color: #f7f7f7;
 }
 #sky-wrapper .off .left .panel-body {
     bottom: 80px;
@@ -687,54 +725,113 @@ div:active {
 
 .input ul .item, .scene ul .item{
     margin: 10px 0;
-    height: 35px;
+    /*height: 35px;*/
     line-height: 35px;
     overflow: hidden;
 }
 
-.scene ul .item{
+.input ul .item, .scene ul .item{
     height: inherit;
-    border: 1px solid #f9f9f9;
-    margin: 5px;
+    /*border: 1px solid #f9f9f9;*/
+    margin: 5px 0;
 }
+
 .input ul .item.active, .scene ul .item.active{
-    color: #fff;
+    border: 1px solid red;
 }
+
 .input ul .item.disable{
     cursor: not-allowed;
 }
 
-.scene ul .item.active{
-    color: #fff;
-    border: 1px solid red;
-}
-.scene ul .item:hover{
-    color: #fff;
-    border: 1px solid red;
-}
 
-.input ul .item > :nth-child(1),.scene ul .item > :nth-child(1){
-    float: left;
-    height: 100%;
-    margin-left: 9px;
-    line-height: inherit;
-}
 .input ul .item > span:nth-child(1){
     margin-left: 5px;
+    height: 35px;
+    min-width: 18px;
 }
-
 .input ul .item > :nth-child(2),.scene ul .item > :nth-child(2){
     text-align: center;
     display: block;
-    width: 100%;
-    z-index: 8;
+    /*width: 100%;*/
+    /*z-index: 8;*/
 }
-.scene ul .item > :nth-child(3){
+.input ul .item > :nth-child(3){
+    display: none;
+}
+
+.input ul .item{
+    position: relative;
+    display: block;
+    /*filter: alpha(opacity=800);*/
+    /*opacity: 0.8;*/
+}
+
+.placeholder-16-9{
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.5%;
+}
+
+.input ul .item .content{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.input ul .item .content .display-table{
+    width: 100%;
+    height: 100%;
+}
+
+.row.off .input ul .item{
+    margin: 0;
+    border: 0;
+    height: 50px;
+    line-height: 50px;
+}
+.row.off .input ul .item .content,.row.off .input ul .item .placeholder-16-9{
+    display: none;
+}
+.row.off .input ul .item > :nth-child(3){
+    display: inline-block;
+    margin-left: 10px;
+}
+.row.off .input ul .item > span:nth-child(3){
+    margin-left: 5px;
+}
+
+
+/*.scene ul .item.active{*/
+    /*color: #fff;*/
+    /*border: 1px solid red;*/
+/*}*/
+.scene ul .item{
+    color: #696969;
+
+}
+.scene ul .item:hover{
+    border: 1px solid red;
+}
+
+.scene ul .item > :nth-child(1){
+    float: left;
+    height: 100%;
+    margin-left: 10px;
+    line-height: inherit;
+}
+.scene ul .item > :nth-child(2){
+    border: 1px solid #696969;
+}
+
+.scene-img{
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
 
-    background: rgba(25, 25, 25, 0.73) no-repeat;
+    background: #bababa no-repeat;
     background-size: 100%;
 }
 
@@ -746,6 +843,10 @@ div:active {
     background: url(../img/2_2.png) no-repeat;
     background-size: 100%;
 }
+.row.off .scene ul .item > :nth-child(2),.row.off .scene ul .item > :nth-child(3){
+    display: none;
+}
+
 
 #sky-wrapper .panel-inverse > .panel-heading + .panel-collapse > .panel-body {
     border-top-color: #222;
@@ -847,7 +948,7 @@ div:active {
     height: 0px;
     position: absolute;
     opacity: 0.5;
-    background: red;
+    background: #e1e7f1;
 }
 #active-box{
     border:1px dashed #fff;
@@ -935,7 +1036,7 @@ div:active {
     margin: 10px 0;
 }
 
-/*重写bootstrap样式*/
+/*重写bootstrap样式开始*/
 .form-horizontal .form-group {
     margin-right: 0;
     margin-left: 0;
@@ -955,6 +1056,32 @@ div:active {
     overflow: auto;
 }
 
+.navbar-inverse{
+    background-color: #424242;
+    border-color: #232323;
+}
+.navbar{
+    margin-bottom: 5px;
+}
+.navbar-inverse .navbar-nav>.open>a:hover {
+    background-color: #696969;
+}
+.navbar-inverse .navbar-nav>.open>a{
+    background-color: #696969;
+}
+.navbar-inverse .navbar-nav>li>a {
+    color: #f7f7f7;
+}
+.dropdown-menu>li>a{
+    padding: 6px 20px;
+}
+
+.user-info .dropdown-toggle{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+/*重写bootstrap样式结束*/
+
 .color-1{
     color: #89ff7f;
 }
@@ -971,7 +1098,7 @@ div:active {
     height: 25px;
     line-height: 15px;
     position: absolute;
-    border-radius: 50px;
+    /*border-radius: 50px;*/
     z-index: -1;
     padding: 5px;
 
@@ -985,5 +1112,11 @@ div:active {
 
 #drag.active {
     z-index: 999;
-    opacity:1;
+    filter: alpha(opacity=800);
+    opacity: 0.8;
 }
+
+.slimScrollDiv{
+    overflow: inherit !important;
+}
+
