--- a/web/css/app-pep.css
+++ b/web/css/app-pep.css
@@ -171,12 +171,12 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     /*background-size: 80px 80px;*/
 /*}*/
 .droppable {
-    /*position: absolute;*/
+    position: absolute;
     height: 100%;
     width: 100%;
     /*z-index: -1;*/
     cursor: crosshair;
-    transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1);
+
 }
 
 .refresh,.fullscreen{
@@ -213,6 +213,7 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     /*z-index: 1;*/
     filter: alpha(opacity=800);
     opacity: 0.8;
+
 }
 div:active {
     cursor: -webkit-grabbing;
@@ -223,7 +224,7 @@ div:active {
     /*z-index: 10 !important;*/
     border: 1px solid #fff;
 }
-.window.dm-active{
+.window.pep-active{
     filter: alpha(opacity=500);
     opacity: 0.5;
 }
@@ -359,13 +360,13 @@ div:active {
     right: -20px; bottom: -20px;
 }
 
-/*.dragMove:hover .coor{*/
+/*.pep:hover .coor{*/
     /*display: block;*/
 /*}*/
-.dragMove.active .coor{
+.pep.active .coor{
     display: block;
 }
-.dragMove.active.dm-active .coor:not(:active){
+.pep.active.pep-active .coor:not(:active){
     display: none;
 }
 
@@ -538,6 +539,12 @@ div:active {
 }
 #wall-switcher li a{
     display: block;
+    height: 50px;
+    line-height: 50px;
+    padding: 0;
+}
+#wall-switcher li a:hover,#wall-switcher li a:focus{
+    background-color: transparent;
 }
 /* RESPONSIVE CSS
 -------------------------------------------------- */
@@ -594,29 +601,34 @@ div:active {
     position: absolute;
     height: 100%;
     width: 100%;
-    /*overflow: auto;*/
+    overflow: hidden;
+
+    transform: scale(1);
+    transform-origin: center 50% 0px;
+    transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 #sky-wrapper .panel-inverse > .panel-heading {
     top:0;
 }
-#sky-wrapper .panel-inverse > .panel-heading .action-btn-group{
+#sky-wrapper .panel-inverse .action-btn-group{
     float: left;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-#sky-wrapper .panel-inverse > .panel-heading .action-btn-group.right{
+#sky-wrapper .panel-inverse .action-btn-group.right{
     float: right;
 }
-#sky-wrapper .panel-inverse > .panel-heading .action-btn-group.right input{
+#sky-wrapper .panel-inverse .panel-footer .action-btn-group.right{
     width: 150px;
 }
-#sky-wrapper .panel-inverse > .panel-heading .action-btn-group.right .dropdown-menu{
+
+#sky-wrapper .panel-inverse .action-btn-group.right .dropdown-menu{
     right: 0;
     left: auto;
 }
-#sky-wrapper .panel-inverse > .panel-heading .action-btn-group .item{
+#sky-wrapper .panel-inverse .action-btn-group .item{
     float: left;
     padding: 0 10px;
 }
@@ -654,7 +666,7 @@ div:active {
 
 #sky-wrapper .panel-inverse > .panel-footer {
     bottom:0;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 #sky-wrapper .row.off .left > .panel-inverse > .panel-footer {
     /*height: 120px;*/
@@ -667,7 +679,7 @@ div:active {
     border: none;
 }
 #sky-wrapper .panel-inverse .ellipsis-btn{
-    width: calc(100% - 105px);
+    width: calc(100% - 150px);
     height: 100%;
     padding: 0;
     margin: 0;
@@ -1002,9 +1014,13 @@ div:active {
     border:1px dashed #fff;
 }
 .mouse-pos{
-    float: right;
-    color: #fff;
+    color: #4b97e2;
     padding: 0 5px;
+    position: absolute;
+    top: -40px;
+    right: 15px;
+    /* bottom: 0; */
+    line-height: 30px;
 }
 
 /*分隔线*/
@@ -1168,9 +1184,85 @@ div:active {
     overflow: inherit !important;
 }
 
-.pos-relative{
-    position: relative;
+/*range input*/
+input[type=range] {
+    -webkit-appearance: none;
+    /*margin: 18px 0;*/
+    width: 90%;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    height: 40px;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-container{
+    background: transparent;
+    margin: 10px auto;
+}
+input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    height: 1px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: #f7f7f7;
+    /*position: absolute;*/
+    /*top: 50%;*/
+}
+input[type=range]::-webkit-slider-thumb {
+    height: 20px;
+    width: 20px;
+    border-radius: 100%;
+    background: #f7f7f7;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -10px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #f7f7f7;
+}
+
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    background: #F7F7F7 none repeat scroll 0% 0%;
+}
+input[type=range]::-moz-range-thumb {
+    height: 20px;
+    width: 20px;
+    border-radius: 100%;
+    background: #f7f7f7;
+    cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: none;
+    border: transparent;
+    margin: 0;
+}
+input[type=range]::-ms-fill-lower {
+    background: transparent;
+}
+input[type=range]::-ms-fill-upper {
+    background: transparent;
+}
+input[type=range]::-ms-thumb {
+    height: 20px;
+    width: 20px;
+    border-radius: 100%;
+    background: #f7f7f7;
+    cursor: pointer;
+    border: 1px solid #b5b5b5;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: transparent;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: transparent;
 }
