--- a/web/css/app-pep.css
+++ b/web/css/app-pep.css
@@ -138,7 +138,7 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     /*line-height: 100vh;*/
 }
 #loader .sk-child{
-    background-color: #4b97e2;
+    background-color: rgba(14, 14, 14, 0.94);
 }
 
 .frosted-glass{
@@ -171,10 +171,12 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     /*background-size: 80px 80px;*/
 /*}*/
 .droppable {
-    position: absolute;
-    height: 100%;
-    width: 100%;
+    position: relative;
+    /*height: 100%;*/
+    /*width: 100%;*/
     /*z-index: -1;*/
+    overflow: hidden;
+    line-height: 0;
     cursor: crosshair;
 
 }
@@ -204,6 +206,7 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     position: absolute;
     width: 200px;
     height: 100px;
+    line-height: initial;
     color: #222222;
     /*margin: 10px;*/
     border: 1px solid #ccc;
@@ -213,6 +216,8 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     /*z-index: 1;*/
     filter: alpha(opacity=800);
     opacity: 0.8;
+
+    backface-visibility: hidden;
 
 }
 div:active {
@@ -528,14 +533,25 @@ div:active {
     /*margin-bottom: -2px;*/
     position: relative;
 }
-#wall-switcher li.active a:before{
+#wall-switcher li a:before{
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
     left: calc(50% - 10px);
     border-left:10px solid transparent;
     border-right:10px solid transparent;
     border-bottom:10px solid #e1e7f1;
+
+    filter: alpha(opacity=0);
+    opacity: 0;
+
+    transition: all .3s ease-out 0s;
+}
+#wall-switcher li.active a:before{
+    bottom: 0;
+
+    filter: alpha(opacity=1);
+    opacity: 1;
 }
 #wall-switcher li a{
     display: block;
@@ -601,7 +617,7 @@ div:active {
     position: absolute;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    /*overflow: hidden;*/
 
     transform: scale(1);
     transform-origin: center 50% 0px;
@@ -782,26 +798,53 @@ div:active {
 .input ul,.scene ul{
     list-style: none;
     color: #fff;
-    padding: 0 2px 0 0;
+    padding: 0;
     margin: 0;
 }
 
 .input ul .item, .scene ul .item{
-    margin: 5px -2px 0 0;
+    margin: 5px 0 0 0;
     /*height: 35px;*/
     line-height: 35px;
     overflow: hidden;
 }
 
-.input ul .item:hover, .scene ul .item:hover{
-    margin-right: 0;
-    /*border-top: 2px solid #8a6d3b;*/
-    box-shadow: 2px 2px 2px #101010;
+.input ul .item:hover,.scene ul .item:hover{
+    box-shadow: 0 0 30px #101010;
 }
+
 .input ul .item.active, .scene ul .item.active{
-    margin-right: 0;
-    /*border-top: 2px solid #8a6d3b;*/
-    box-shadow: 2px 2px 2px #101010;
+    box-shadow: 0 0 30px #101010;
+}
+
+.input ul .item::after{
+    content: '';
+
+    position: absolute;
+    right: -10px;
+    top: calc(50% - 10px);
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-right: 10px solid #e1e7f1;
+
+    filter: alpha(opacity=0);
+    opacity: 0;
+
+    transition: all .3s ease-out 0s;
+}
+.row.off .input ul .item::after{
+
+    top: calc(50% - 6px);
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-right: 6px solid #e1e7f1;
+}
+.input ul .item.active::after{
+
+    right: 0;
+
+    filter: alpha(opacity=1);
+    opacity: 1;
 }
 
 .input ul .item.disable{
@@ -851,7 +894,7 @@ div:active {
 }
 
 .row.off .input ul .item{
-    margin: 2px 0;
+    /*margin: 2px 0;*/
     height: 50px;
     line-height: 50px;
 }
@@ -1009,10 +1052,11 @@ div:active {
     position: absolute;
     opacity: 0.5;
     background: #e1e7f1;
-}
-#active-box{
+
     border:1px dashed #fff;
+    backface-visibility: hidden;
 }
+
 .mouse-pos{
     color: #4b97e2;
     padding: 0 5px;
@@ -1265,4 +1309,11 @@ input[type=range]:focus::-ms-fill-lower {
 }
 input[type=range]:focus::-ms-fill-upper {
     background: transparent;
+}
+
+
+/*修改animate.css动画延时*/
+.animated{
+    -webkit-animation-duration:300ms;
+    animation-duration:300ms;
 }
