--- a/web/css/app-pep.css
+++ b/web/css/app-pep.css
@@ -29,6 +29,33 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
 #tag-list {
     height: 200px;
 }
+/* 滚动条样式 */
+
+.right .panel-body::-webkit-scrollbar {
+    width: 15px;
+    height: 15px;
+}
+
+.right .panel-body::-webkit-scrollbar-track,
+.right .panel-body::-webkit-scrollbar-thumb {
+    border-radius: 999px;
+    border: 5px solid transparent;
+}
+
+.right .panel-body::-webkit-scrollbar-track {
+    box-shadow: 1px 1px 5px rgba(0,0,0,.2) inset;
+}
+
+.right .panel-body::-webkit-scrollbar-thumb {
+    min-height: 20px;
+    background-clip: content-box;
+    box-shadow: 0 0 0 5px rgba(0,0,0,.2) inset;
+}
+
+.right .panel-body::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
 
 /*修改fontawesome*/
 .fa{
@@ -206,7 +233,7 @@ a, a:link, a:visited, a:hover, a:active ,ul, div{
     position: absolute;
     width: 200px;
     height: 100px;
-    line-height: initial;
+    line-height: normal !important;
     color: #222222;
     /*margin: 10px;*/
     border: 1px solid #ccc;
@@ -817,7 +844,7 @@ div:active {
     box-shadow: 0 0 30px #101010;
 }
 
-.input ul .item::after{
+.input ul .item::before{
     content: '';
 
     position: absolute;
@@ -832,14 +859,14 @@ div:active {
 
     transition: all .3s ease-out 0s;
 }
-.row.off .input ul .item::after{
+.row.off .input ul .item::before{
 
     top: calc(50% - 6px);
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-right: 6px solid #e1e7f1;
 }
-.input ul .item.active::after{
+.input ul .item.active::before{
 
     right: 0;
 
@@ -924,6 +951,11 @@ div:active {
     height: 100%;
     margin-left: 10px;
     line-height: inherit;
+
+    font-family: "League-Gothic", Courier;
+    text-transform: uppercase;
+    color: #949494;
+    text-shadow: 0px 2px 3px #666;
 }
 .scene ul .item > :nth-child(2){
     /*border-bottom: 1px solid #696969;*/
